src/assets/css/common.scss
/* ... */
.yes-button {
  color: var(--ion-color-secondary) !important;
  background-color: #fff !important;
  // margin-right: 1rem !important;
}

.no-button {
  color: #fff !important;
  background-color: var(--ion-color-primary) !important;
  margin-right: 1rem !important;
}

//Toast Styles
ion-toast {
  --color: #fbfbfb;
  font-family: BwModelicaLight;
  font-size: 0.8rem;
  --width: 100%;
  --border-radius: 0px;
  top: -45%;

  &::part(container) {
    padding-top: 1.5rem;
    .toast-content {
      padding: 1rem 0.3rem 0.3rem 0.3rem !important;
    }
  }

  &::part(message) {
    text-align: center;
    padding: 0 0.7rem;
    font-size: 0.85rem;
    letter-spacing: 0.02rem;
    font-family: BwModelicaLight;
    font-weight: 100;
  }
}

//Custom file upload style
.form__upload {
  width: 100%;
  height: 100%;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1000000;
}

.form__upload + .upload {
  text-decoration: none;
  padding: 3px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
}

.file-name {
  margin-top: 0.2rem;
  text-align: right;
  font-size: 0.7rem;
  color: var(ion-text-gray2-color);
}

//For normalizing the disabled input on Home page
.native-input[disabled].sc-ion-input-md,
.native-input[disabled].sc-ion-input-ios {
  opacity: 1;
}

ion-refresher.refresher-native.refresher-refreshing
  ion-refresher-content
  .refresher-refreshing {
  margin-top: 2rem;
}

//Transactions and Transaction Lists
.transactions-list {
  border: 1px solid rgba(var(--ion-color-primary-rgb), 0.2);
  border-radius: 10px;
  background-color: #fff;
  padding: 0.3rem 0rem;

  &.no-border {
    border: none;
    background-color: transparent;

    .transaction {
      padding: 0.8rem 0;
    }
  }

  .transaction {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    padding: 0.7rem 0rem;
    border-bottom: 0.005rem solid rgba(var(--ion-color-primary-rgb), 0.09);

    .trans-type-wrapper {
      display: flex;
      gap: 0.5rem;
      align-items: center;

      ion-icon {
        font-size: 2rem;
      }

      .trans-type {
        display: flex;
        flex-direction: column;
        gap: 0.3rem;

        h3 {
          font-size: 0.87rem;
          letter-spacing: -0.02rem;
          font-family: BwModelicaRegular;
          // font-weight: 600;
          // font-weight: bold;
          color: var(--ion-color-secondary);
        }
      }
    }

    .amount-date {
      .amount {
        font-family: BwModelicaBold;
        font-weight: 600;
      }
    }

    p.trans-type-p,
    .trans-date {
      font-size: 0.615rem;
      font-family: BwModelicaLight;
      font-weight: 600;
      letter-spacing: 0.025rem;
      color: rgba(var(--ion-color-secondary-rgb), 0.5);
    }

    .trans-date {
      text-align: right;
      margin-top: 0.1rem;
    }

    &:last-child {
      border-bottom: none;
    }
  }
}

.no-transactions {
  padding: 3rem 0;
  border: 1px solid rgba(var(--ion-color-primary-rgb), 0.2);
  background-color: #fff;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 1rem;
  align-items: center;

  &.less-padding {
    padding: 1.8rem 0;
  }

  &.more-padding {
    padding: 6rem 0;
  }

  &.no-border {
    border: none;
    background-color: transparent;
  }

  p {
    width: 70%;
    text-align: center;
    letter-spacing: -0.02rem;
    font-size: 0.87rem;
    font-family: "BwModelicaRegular";
  }
}

.finish-kyc {
  padding: 0.5rem;
  border: 1px solid rgba(var(--ion-color-primary-rgb), 0.2);
  background-color: #fff;
  border-radius: 10px;
  display: flex;
  gap: 0.5rem;

  .progress {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 2rem;
    height: 2rem;
    border-radius: 100px;
    background: radial-gradient(closest-side, white 79%, transparent 80% 100%),
      conic-gradient(
        var(--ion-color-primary) 75%,
        rgba(var(--ion-color-secondary-rgb), 0.2) 0
      );
    font-family: BwModelicaBold;
    font-size: 0.6rem;
  }

  .text {
    p:first-child {
      color: rgba(var(--ion-color-secondary-rgb), 0.5);
    }

    p:last-child {
      font-family: BwModelicaRegular;
      font-size: 0.65rem;
      letter-spacing: 0.01rem;
    }
  }
}

.blur-text {
  text-shadow: 0 0 1rem #fff !important;
  color: transparent !important;
  transition: text-shadow ease 0.3s !important;

  &.green {
    text-shadow: 0 0 1rem var(--ion-color-primary) !important;
  }
}

.show-text {
  text-shadow: none;
  transition: text-shadow ease 0.3s;
  color: var(--ion-color-tertiary);

  &.regular {
    color: var(--ion-color-primary);
  }
}

.hide-text {
  opacity: 0;
  transition: opacity ease 0.3s;
}

.reveal-text {
  opacity: 1;
  transition: opacity ease 0.3s;
}

// MISCSS

div.backdrop {
  --animate-duration: 0.2s;
  z-index: 100;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(var(--ion-color-secondary-rgb), 0.7);
}

.default-img {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 100px;
  background-color: var(--ion-color-secondary);
  color: rgba(var(--ion-color-tertiary-rgb), 0.8);
  width: 2.7rem;
  height: 2.7rem;
  font-family: BwModelicaLight;
  font-size: 1.2rem;
}
/* ... */

